<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">konashi PIO Tester</string>

    <string name="find_button">Find konashi</string>
    <string name="disconnect_button">Disconnect konashi</string>
    <string name="check_connection_button">Check Connection</string>
    <string name="reset_button">Reset konashi</string>
    <string name="led2">LED2</string>
    <string name="led3">LED3</string>
    <string name="led4">LED4</string>
    <string name="led5">LED5</string>

    <string name="sw">S1:</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>