<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity" >

    <Button
        android:id="@+id/find_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/find_button_margin"
        android:text="@string/find_button"/>

    <Button
        android:id="@+id/check_connection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/find_button_margin"
        android:text="@string/check_connection_button"
        />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/led2_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/find_button_margin"
            android:text="@string/led2"/>

        <Button
            android:id="@+id/led3_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/find_button_margin"
            android:text="@string/led3"/>

        <Button
            android:id="@+id/led4_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/find_button_margin"
            android:text="@string/led4"/>

        <Button
            android:id="@+id/led5_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/find_button_margin"
            android:text="@string/led5"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/find_button_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sw" />

            <TextView
                android:id="@+id/sw_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>